ปรับแก้โปรแกรมใส่ Error Message field ของระบบข้อมูลห้องพัก - close #118
